### 4.0.74 - bug-fix: disabled auto zoom in input 'Text' - Safari on iPhone - change: enabled callout on mobile device

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,7 +6,9 @@
 @import url("../sass/hover.css");
 
 /** custom scroll bar **/
-
+input, select:focus, textarea {
+    font-size: 16px !important;
+}
 // IE
 // #scroll-me { 
 //     color:black;
