--- a/src/iframe-style.css
+++ b/src/iframe-style.css
@@ -30,9 +30,12 @@
     min-height: auto;
 }
 #tiledesk-container.closed #tiledeskdiv.callout {
-    width: 400px;
+    /* width: 400px;
     height: 100px;
+    min-width: 400px; */
+    width: 100%;
     min-width: 400px;
+    max-width: 400px;
 }
 #tiledesk-container.closed #tiledeskdiv.messagePreview {
     width: 340px;
@@ -127,6 +130,11 @@
             max-width: 100%;
             max-height: 100%;
             min-width: 320px;
+        }
+
+        #tiledesk-container.closed #tiledeskdiv.callout {
+            min-width: auto;
+            max-width: 100%;
         }
 
     }
